# lora-exploration

./: .gitattributes  .gitignore  Cargo.toml  README.md  RUNPOD.md  Untitled.ipynb  analyze_images.py  benchmark_batch_lora.py  benchmark_lora.py  compare_lora.py  compare_loras.py  convert_gina_dataset.py  convert_lora_for_diffusers.py  copy_lora_to_repo.sh  create_lora_notebook.py  create_notebook.py  download_minimal_sdxl.py  download_tokenizers.py  fix_captions.py  generate_lora_simple.py  generate_with_loras.py  gina_captions.json  gina_captions.txt  ilya_repin_prompts.json  image_caption.py  inspect_image_metadata.py  lora_theory.tex  lora_training_complete.ipynb  map_ilya_repin_prompts.py  multi_cfg_dual_lora_grid.py  multi_cfg_lora_grid.py  multi_lora_training.sh  package-lock.json  preprocess_images.py  print_sdxl_layers.py  process_repin.py  pyproject.toml  run_diffusers_inference.sh  run_diffusers_training.sh  run_gina_generator.sh  (+49 more)
.ipynb_checkpoints/: lora_training_complete-checkpoint.ipynb  lora_visualizations-checkpoint.ipynb
dual_lora_outputs/: 20250414_152853_cfg11.0_dual_lora_alpha_grid.txt  20250414_152853_cfg13.0_dual_lora_alpha_grid.txt  20250414_152853_cfg3.0_dual_lora_alpha_grid.txt  20250414_152853_cfg5.0_dual_lora_alpha_grid.txt  20250414_152853_cfg7.0_dual_lora_alpha_grid.txt  20250414_152853_cfg9.0_dual_lora_alpha_grid.txt
emo_dataset/: captions.json  random_token.txt
fixed_lora_output_v3/: lora_info.json
gina photos/: IMG20240721162733.heic  IMG20240725201609.heic  IMG20240802200807.heic  IMG20240802200822.heic  IMG20241004182232.heic  IMG20241004191042.heic  IMG20250123214601.heic  IMG20250126220328.heic  IMG20250126220344.heic  IMG20250302022441.heic  IMG20250328111015.heic
gina_dataset_cropped/: captions.json
(+103 files in other folders)
